--- a/src/Header.css
+++ b/src/Header.css
@@ -2,7 +2,7 @@
     height: 60px;
     display: flex;
     align-items: center;
-    background-color: #999999;
+    background-color: #2a3439;
     position: sticky;
     top: 0;
     z-index: 100;
@@ -13,4 +13,60 @@
     object-fit: contain;
     margin: 0 20px;
     margin-top: 3px;
+}
+
+.header__search {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    border-radius: 24px;
+}
+
+.header__searchInput {
+    height: 12px;
+    padding: 10px;
+    border: none;
+    width: 100%;
+}
+
+.header__searchIcon {
+    padding: 5px;
+    height: 22px !important;
+    background-color: #FF6666;
+}
+
+.header__optionLineOne {
+    font-size: 12px;
+    font-weight: 700;
+    color: #fff;
+}
+
+.header__optionLineTwo {
+    font-size: 13px;
+    font-weight: 800;
+    color: #fff;
+}
+
+.header__optionBasket {
+    display: flex;
+    align-items: center;
+    color: #fff;
+}
+
+.header__basketCount {
+    margin-left: 2px;
+    margin-right: 10px;
+    font-size: large;
+}
+
+.header__nav {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.header__option {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    margin-right: 10px;
 }
