--- a/src/Header.css
+++ b/src/Header.css
@@ -32,7 +32,7 @@
 .header__searchIcon {
     padding: 5px;
     height: 22px !important;
-    background-color: #FF6666;
+    background-color: #8CEADE;
 }
 
 .header__optionLineOne {
