--- a/src/Home.css
+++ b/src/Home.css
@@ -4,3 +4,9 @@
     margin-bottom: -150px;
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); 
 }
+
+.slide-image-container {
+    object-fit: fill;
+    max-width: 100%;
+    height: 100%;
+   }
