--- a/src/Home.css
+++ b/src/Home.css
@@ -1,12 +1,44 @@
+.home {
+    max-width: 1500px;
+    margin: 0 auto;
+}
+
+.home__row {
+    display: flex;
+    margin: 0 -5px;
+    z-index: 1;
+}
+
 .home__image {
     width: 100%;
-    z-index: -1;
     margin-bottom: -150px;
-    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); 
+    z-index: -1;
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
 
 .slide-image-container {
     object-fit: fill;
-    max-width: 100%;
+    width: 100%;
     height: 100%;
-   }
+    z-index: -1;
+}
+
+.custom-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    color: #333;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    outline: none;
+  }
+  
+.custom-prev-arrow {
+    left: 10px;
+  }
+
+.custom-next-arrow {
+    right: 10px;
+  }
