--- a/src/Home.css
+++ b/src/Home.css
@@ -1,6 +1,8 @@
 .home {
     max-width: 1500px;
     margin: 0 auto;
+    height: 800px; /**/
+    position: relative; /**/
 }
 
 .home__row {
@@ -12,10 +14,15 @@
 .home__image {
     width: 100%;
     margin-bottom: -150px;
-    z-index: -1;
-    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    z-index: -2;
+    mask-image: linear-gradient(to bottom, 
+    rgba(0, 0, 0, 1),   
+    rgba(0, 0, 0, 0.1), 
+    rgba(0, 0, 0, 0)
+    );
+    
 }
-
+/* 
 .slide-image-container {
     object-fit: fill;
     width: 100%;
@@ -37,8 +44,10 @@
   
 .custom-prev-arrow {
     left: 10px;
+    
   }
 
 .custom-next-arrow {
     right: 10px;
-  }
+    
+  } */
