--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -1,12 +1,31 @@
-.checkout{
+/* .checkout{
     display: flex;
     padding: 20px;
     background-color: white;
     height: max-content;
-}
+} */
 
-.checkout__banner{
-    width: 100%;
-    height: 25%;
-   margin-bottom: 10px;
-}
+.checkout {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px;
+  }
+
+.checkout__left {
+    flex: 0.7;
+    padding: 20px;
+  }
+  
+  .checkout__title {
+    margin-bottom: 10px;
+  }
+  
+  .checkout__right {
+    flex: 0.3;
+  }
+  
+  
+  
+  
+  
+  
