--- a/src/Login.css
+++ b/src/Login.css
@@ -11,4 +11,54 @@
     align-items: center;
     flex-direction: column;
     display: flex;
+    /* background-color: #8CEADE; */
+    background-color: #2a3439;
+    height: 100vh;
+}
+
+.login__container {
+    width: 300px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    border: 1px solid;
+    padding: 20px;
+    background-color: white;
+}
+
+.login__container > h1 {
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.login__container > form > h5 {
+    /* font-weight: 500; */
+    margin-bottom: 5px;
+}
+
+.login__container > form > input {
+    margin-bottom: 5px;
+    margin-bottom: 10px;
+    background-color: white;
+    width: 98%;
+}
+
+.login__signinButton{
+    background-color: #8CEADE;
+    border-radius: 2px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid;
+    margin-top: 10px;
+}
+
+.login__signupButton{
+    background-color:whitesmoke;
+    border-color: darkgray;
+    border-radius: 2px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid;
+    margin-top: 10px;
 }
