--- a/src/Header.css
+++ b/src/Header.css
@@ -2,7 +2,7 @@
     height: 60px;
     display: flex;
     align-items: center;
-    background-color: #2a3439;
+    /* background-color: #2a3439; */
     position: sticky;
     top: 0;
     z-index: 100;
